fd-sources/qa/testworks/build.log
Compiling library testworks
[Loading library Dylan...]
Parsing testworks-lib.dylan
[Loading library common-dylan...
  [Loading library common-extensions...
In Define Library testworks.:
Error: Puked loading library common-extensions:
  Unit hash mismatch; version mismatch between data units.
#"Dylan"
]
"common-dylan-exports.dylan", line 5, characters 7 through 23:
      use common-extensions,
          ^^^^^^^^^^^^^^^^^
  Error: Using broken library common-extensions

  [Loading library transcendental...
Error: Puked loading library transcendental:
  Unit hash mismatch; version mismatch between data units.
#"Dylan"
]
"common-dylan-exports.dylan", line 15, characters 7 through 20:
      use transcendental,
          ^^^^^^^^^^^^^^
  Error: Using broken library transcendental

  [Loading library streams...
Error: Puked loading library streams:
  Unit hash mismatch; version mismatch between data units.
#"Dylan"
]
"common-dylan-exports.dylan", line 19, characters 7 through 13:
      use streams,
          ^^^^^^^
  Error: Using broken library streams
"common-dylan-exports.dylan", line 29, characters 7 through 23:
      use common-extensions,
          ^^^^^^^^^^^^^^^^^
  Error: No such module common-extensions in library common-dylan.
"common-dylan-exports.dylan", line 31, characters 7 through 13:
      use streams,
          ^^^^^^^
  Error: No such module streams in library common-dylan.
]
In Define Module testworks.:
"testworks-lib.dylan", line 18, characters 7 through 15:
      use simple-io,
          ^^^^^^^^^
  Error: No such module simple-io in library testworks.
"testworks-lib.dylan", line 20, characters 7 through 13:
      use threads,
          ^^^^^^^
  Error: No such module threads in library testworks.
Parsing testworks.dylan
Parsing components.dylan
"components.dylan", line 63, characters 9 through 31:
            maybe-execute-component(component, options)
            ^^^^^^^^^^^^^^^^^^^^^^^
  Error: Parse error at or before ordinary word ``maybe-execute-component''
skipping rest of components.dylan
Parsing checks.dylan
Parsing benchmarks.dylan
"benchmarks.dylan", line 66, characters 9 through 12:
        end case;
            ^^^^
  Error: Begin-word mismatch: begin word ``case'' isn't begin word ``block''
"benchmarks.dylan", line 71, characters 7 through 11:
      end block;
          ^^^^^
  Error: Name or define-word mismatch: begin word ``block'' is neither
  begin and define body word ``method'' nor ordinary word ``do-benchmark''
Inside expansion of ``define method'' macro.
"benchmarks.dylan", line 33, character 1 through line 71, character 11:
    define method do-benchmark
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
  through
      end block;
    ^^^^^^^^^^^
  Error: Syntax error in ``method'' statement.  None of the main rules matched.
skipping rest of benchmarks.dylan
Parsing tests.dylan
"tests.dylan", line 161, characters 9 through 11:
            let error = maybe-trap-errors(test.test-function());
            ^^^
  Error: Parse error at or before core word ``let''
skipping rest of tests.dylan
Parsing suites.dylan
Parsing reports.dylan
"reports.dylan", line 22, characters 1 through 3:
    end method display-results;
    ^^^
  Error: Parse error at or before core word ``end''
skipping rest of reports.dylan
Parsing command-line.dylan
"command-line.dylan", line 344, characters 7 through 11:
      end block;
          ^^^^^
  Error: Name or define-word mismatch: begin word ``block'' is neither
  begin and define body word ``method'' nor
  ordinary word ``run-test-application''
Inside expansion of ``define method'' macro.
"command-line.dylan", line 299, character 1 through line 344, character 11:
    define method run-test-application
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  through
      end block;
    ^^^^^^^^^^^
  Error: Syntax error in ``method'' statement.  None of the main rules matched.
skipping rest of command-line.dylan
seeding representations
Finalizing definitions
In Define Module testworks.:
"testworks-lib.dylan", line 40, characters 10 through 26:
             perform-component,
             ^^^^^^^^^^^^^^^^^
  Warning: perform-component is never defined.
"testworks-lib.dylan", line 104, characters 10 through 19:
             do-results,
             ^^^^^^^^^^
  Warning: do-results is never defined.
"testworks-lib.dylan", line 108, characters 10 through 34:
             $benchmark-result-divider,
             ^^^^^^^^^^^^^^^^^^^^^^^^^
  Warning: $benchmark-result-divider is never defined.
"testworks-lib.dylan", line 109, characters 10 through 35:
             print-one-benchmark-result,
             ^^^^^^^^^^^^^^^^^^^^^^^^^^
  Warning: print-one-benchmark-result is never defined.
"testworks-lib.dylan", line 110, characters 10 through 38:
             print-benchmark-result-header,
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  Warning: print-benchmark-result-header is never defined.
"testworks-lib.dylan", line 111, characters 10 through 38:
             print-benchmark-result-footer;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  Warning: print-benchmark-result-footer is never defined.
"testworks-lib.dylan", line 114, characters 10 through 36:
      export *default-progress-function*,
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  Warning: *default-progress-function* is never defined.
"testworks-lib.dylan", line 115, characters 10 through 31:
             null-progress-function,
             ^^^^^^^^^^^^^^^^^^^^^^
  Warning: null-progress-function is never defined.
"testworks-lib.dylan", line 116, characters 10 through 31:
             full-progress-function;
             ^^^^^^^^^^^^^^^^^^^^^^
  Warning: full-progress-function is never defined.
"testworks-lib.dylan", line 119, characters 10 through 34:
      export *default-report-function*,
             ^^^^^^^^^^^^^^^^^^^^^^^^^
  Warning: *default-report-function* is never defined.
"testworks-lib.dylan", line 120, characters 10 through 24:
             display-results,
             ^^^^^^^^^^^^^^^
  Warning: display-results is never defined.
"testworks-lib.dylan", line 121, characters 10 through 29:
             null-report-function,
             ^^^^^^^^^^^^^^^^^^^^
  Warning: null-report-function is never defined.
"testworks-lib.dylan", line 122, characters 10 through 32:
             summary-report-function,
             ^^^^^^^^^^^^^^^^^^^^^^^
  Warning: summary-report-function is never defined.
"testworks-lib.dylan", line 123, characters 10 through 33:
             failures-report-function,
             ^^^^^^^^^^^^^^^^^^^^^^^^
  Warning: failures-report-function is never defined.
"testworks-lib.dylan", line 124, characters 10 through 29:
             full-report-function,
             ^^^^^^^^^^^^^^^^^^^^
  Warning: full-report-function is never defined.
"testworks-lib.dylan", line 125, characters 10 through 28:
             log-report-function;
             ^^^^^^^^^^^^^^^^^^^
  Warning: log-report-function is never defined.
"testworks-lib.dylan", line 128, characters 10 through 29:
      export run-test-application;
             ^^^^^^^^^^^^^^^^^^^^
  Warning: run-test-application is never defined.
"testworks-lib.dylan", line 131, characters 10 through 25:
      export $test-log-header,
             ^^^^^^^^^^^^^^^^
  Warning: $test-log-header is never defined.
"testworks-lib.dylan", line 132, characters 10 through 25:
             $test-log-footer,
             ^^^^^^^^^^^^^^^^
  Warning: $test-log-footer is never defined.
"testworks-lib.dylan", line 141, characters 10 through 21:
             do-benchmark,
             ^^^^^^^^^^^^
  Warning: do-benchmark is never defined.
inheriting slots
inheriting overrides
laying out instances
Optimize called 0 times.
Compilation failed with 20 Warnings and 18 Errors
